<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">ngdemo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="btn_gallery">Gallery</string>
    <string name="btn_fresco_big_pic">Fresco加载大图</string>
    <string name="btn_view_keyboard_event">键盘事件</string>
    <string name="btn_view_anim">自定义动画</string>
    <string name="btn_custom_view">自定义View组件</string>
    <string name="btn_pull_zoom">Recyclerview头部下拉放大</string>
    <string name="btn_titlebar_gradient">标题栏渐变</string>
    <string name="btn_zoom_view_transition">微信朋友圈照片打开效果</string>
    <string name="btn_zoom_view_transition2">微信朋友圈照片打开和查看效果(手势缩放)</string>
    <string name="btn_view_big_pic">查看大图</string>
    <string name="btn_view_big_pic2">查看大图2</string>
    <string name="btn_view_launch_mode">Activity启动模式</string>
    <string name="btn_view_banner_scale">轮播图图片展示效果</string>
    <string name="btn_view_retrofit">Retrofit2 OkHttp3示例</string>
    <string name="btn_view_data_binding">Data Binding</string>
    <string name="btn_view_dagger2">Dagger 2</string>
    <string name="btn_view_dagger2_mvp">Dagger 2 MVP</string>
    <string name="btn_view_aidl">AIDL, Binder</string>

    <string name="main_search_bar_hint">搜索帖子、用户、商品</string>

    <string name="view_anim_play">播放</string>

    <!-- Titles -->
    <string name="title_crossfade">Simple Crossfade</string>
    <string name="title_card_flip">Card Flip</string>
    <string name="title_screen_slide">Screen Slide</string>
    <string name="title_zoom">Zoom</string>
    <string name="title_layout_changes">Layout Changes</string>
    <string name="title_template_step">Step <xliff:g id="step_number">%1$d</xliff:g>: Lorem
        Ipsum</string>

    <!-- Actions -->
    <string name="action_toggle">Toggle indicator</string>
    <string name="action_add_item">Add item</string>
    <string name="action_remove_item">Remove item</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    <string name="action_info">Photo info</string>
    <string name="action_photo">View photo</string>

    <!-- Messages -->
    <string name="message_empty_layout_changes">Add an item above to get started.</string>
    <string name="message_zoom_touch_expand">Touch a photo to expand it.</string>

    <!-- Accessibility-only descriptions -->
    <string name="description_image_1">Image 1</string>
    <string name="description_image_2">Image 2</string>
    <string name="description_zoom_touch_close">Expanded image (touch to close)</string>

    <!-- Other strings -->
    <string name="card_back_title">Angry Red Android</string>
    <string name="card_back_description"><![CDATA[Lorem ipsum dolor sit]]></string>
    <string name="lorem_ipsum"><![CDATA[Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et magna ut erat elementum cursus in quis ipsum. Nam faucibus ultrices eros, vel tempor leo semper sit amet. Duis magna quam, congue vitae interdum nec, condimentum ut lectus. Sed commodo venenatis eros a dignissim. Nunc adipiscing turpis nec magna venenatis at ultricies ipsum bibendum. Sed volutpat urna quis nisi vulputate egestas. Etiam eu dui a enim lacinia dapibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.\n\nPhasellus orci mi, eleifend nec congue id, volutpat at neque. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer semper velit vel leo rutrum sed fermentum elit porta.]]></string>

    <string name="task_marked_complete">Task marked complete</string>
    <string name="task_marked_active">Task marked active</string>
    <string name="no_data">No data</string>
    <string name="no_data_description"/>

    <!-- gallery -->
    <string name="gallery_photo_list_error">照片无法查看</string>
    <string name="gallery_index_out_of_bound">相册数据格式错误</string>
    <string name="gallery_save_success">保存成功</string>
    <string name="gallery_save_failed">保存文件失败</string>
    <string name="gallery_save_photo">保存图片</string>
    <string name="gallery_load_error">资源加载异常</string>
    <string name="cancel">取消</string>
</resources>
