<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                            xmlns:app="http://schemas.android.com/apk/res-auto"
                                            xmlns:tools="http://schemas.android.com/tools"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            app:layout_behavior="@string/appbar_scrolling_view_behavior"
                                            tools:showIn="@layout/app_bar_main">


    <RelativeLayout
        android:id="@+id/content_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="cn.com.nggirl.ngdemo.MainActivity"
        tools:showIn="@layout/app_bar_main">

        <Button
            android:id="@+id/btn_view_anim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_view_anim"/>

        <Button
            android:id="@+id/btn_pull_zoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_view_anim"
            android:text="@string/btn_pull_zoom"/>

        <Button
            android:id="@+id/btn_titlebar_gradient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_pull_zoom"
            android:text="@string/btn_titlebar_gradient"/>

        <Button
            android:id="@+id/btn_zoom_view_transition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_titlebar_gradient"
            android:text="@string/btn_zoom_view_transition"/>

        <Button
            android:id="@+id/btn_zoom_view_transition2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_zoom_view_transition"
            android:text="@string/btn_zoom_view_transition2"/>

        <Button
            android:id="@+id/btn_view_big_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_zoom_view_transition2"
            android:text="@string/btn_view_big_pic"/>

        <Button
            android:id="@+id/btn_view_big_pic2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_view_big_pic"
            android:text="@string/btn_view_big_pic2"/>

        <Button
            android:id="@+id/btn_view_launch_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_view_big_pic2"
            android:text="@string/btn_view_launch_mode"/>

        <Button
            android:id="@+id/btn_view_banner_pic_scale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_view_launch_mode"
            android:text="@string/btn_view_banner_scale"/>

        <Button
            android:id="@+id/btn_view_retrofit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_view_banner_pic_scale"
            android:text="@string/btn_view_retrofit"/>

        <Button
            android:id="@+id/btn_view_data_binding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_view_retrofit"
            android:text="@string/btn_view_data_binding"/>

        <Button
            android:id="@+id/btn_view_dagger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_view_data_binding"
            android:text="@string/btn_view_dagger2"/>

        <Button
            android:id="@+id/btn_view_dagger_mvp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_view_dagger"
            android:text="@string/btn_view_dagger2_mvp"/>

    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>